--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "type": "module",
   "description": "[![Actions Status](https://github.com/YanovskiyS/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/YanovskiyS/frontend-project-46/actions)",
   "main": "index.js",
   "scripts": {
@@ -8,8 +9,12 @@
   },
   "author": "",
   "license": "ISC",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
