--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,21 +1,18 @@
-name: tests
-on: push
-jobs:
-  jest:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16.x'
-          cache: 'npm'
-      - run: make install-deps
-      - run: make test
-      - name: test coverage
-        uses: paambaati/codeclimate-action@v3.2.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC }}
-        with:
-          coverageCommand: make coverage
-          debug: true
+lint: #lint
+	npx eslint .
+
+fix: #fix
+	npx eslint . --fix
+
+publish: #publish
+	npm publish --dry-run
+
+install: #install
+	npm ci
+
+jest: #jest
+	NODE_OPTIONS=--experimental-vm-modules npx jest
+
+coverage: #jest coverage
+	NODE_OPTIONS=--experimental-vm-modules npx jest --coverage
+
