--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,21 +1,48 @@
-name: tests
-on: push
+# Name of workflow
+name: Node CI
+
+# Trigger the workflow on push or pull request
+on:
+  - push
+  - pull_request
+
+env:
+  CI: true
+
 jobs:
-  jest:
+  build:
+
+    # The type of machine to run the job on
     runs-on: ubuntu-latest
+
+    strategy:
+      # Node versions list
+      matrix:i
+        node-version: [20.x]
+
     steps:
-      - uses: actions/checkout@v2
-      - name: use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        # Check-out repository under GitHub workspace
+        # https://github.com/actions/checkout
+      - uses: actions/checkout@v3
+        # Step's name
+      - name: Use Node.js ${{ matrix.node-version }}
+        # Configures the node version used on GitHub-hosted runners
+        # https://github.com/actions/setup-node
+        uses: actions/setup-node@v3
+        # The Node.js version to configure
         with:
-          node-version: '16.x'
+          node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: make install
-      - run: make jest
-      - name: test coverage
-        uses: paambaati/codeclimate-action@v3.2.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC }}
-        with:
-          coverageCommand: make coverage
-          debug: true
+      - run: make lint
+      - run: make test
+       - name: Test & publish code coverage
+         # Publish code coverage on Code Climate
+         # https://github.com/paambaati/codeclimate-action
+         uses: paambaati/codeclimate-action@v4.0.0
+         # Add Code Climate secret key
+         env:
+           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+         with:
+           coverageCommand: make test-coverage
+           debug: true
