--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
           node-version: '16.x'
           cache: 'npm'
       - run: make install-deps
-      - run: make tests
+      - run: make test
       - name: test-coverage
         uses: paambaati/codeclimate-action@v3.2.0
         env:
