--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,34 +1,37 @@
-name: Node CI
-
+name: nodejs
+# Trigger the workflow on push or pull_request
 on:
   - push
   - pull_request
 
 env:
-  CI: true
+ CI: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
+ build:
+  # The type of machine to run the job on
+  runs-on: ubuntu-latest
+  strategy:
+    # Node versions list
+    matrix:
+      node-version: [16.x]
+  steps:
+    - uses:
+        actions/checkout@v3
+    - name:
+        Use Node.js ${{ matrix.node-version }}
+      uses:
+        actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cashe: "npm"
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: make install
-      - run: make lint
-      - run: make test
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v3.0.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+    - run: make install
+    - run: make lint
+    - run: make test
+    - name: publish code coverage
+      uses: paambaati/codeclimate-action@v3.0.0
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_ID }}
+      with:
+        debug: true
