--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,37 +1,47 @@
-name: nodejs
-# Trigger the workflow on push or pull_request
+# Name of workflow
+name: my-check
+
+# Trigger the workflow on push or pull request
 on:
   - push
   - pull_request
 
 env:
- CI: true
+  CI: true
 
 jobs:
- build:
-  # The type of machine to run the job on
-  runs-on: ubuntu-latest
-  strategy:
-    # Node versions list
-    matrix:
-      node-version: [16.x]
-  steps:
-    - uses:
-        actions/checkout@v3
-    - name:
-        Use Node.js ${{ matrix.node-version }}
-      uses:
-        actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cashe: "npm"
+  build:
+    # The type of machine to run the job on
+    runs-on: ubuntu-latest
 
-    - run: make install
-    - run: make lint
-    - run: make test
-    - name: publish code coverage
-      uses: paambaati/codeclimate-action@v3.0.0
-      env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_ID }}
-      with:
-        debug: true
+    strategy:
+      # Node versions list
+      matrix:
+        node-version: [18.x]
+
+    steps:
+      # Check-out repository under GitHub workspace
+      # https://github.com/actions/checkout
+      - uses: actions/checkout@v3
+        # Step's name
+      - name: Use Node.js ${{ matrix.node-version }}
+        # Configures the node version used on GitHub-hosted runners
+        # https://github.com/actions/setup-node
+        uses: actions/setup-node@v3
+        # The Node.js version to configure
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: make install
+      - run: make lint
+      - run: make test
+      - name: Test & publish code coverage
+        # Publish code coverage on Code Climate
+        # https://github.com/paambaati/codeclimate-action
+        uses: paambaati/codeclimate-action@v3.0.0
+        # Add Code Climate secret key
+        env:
+          CC_TEST_REPORTER_ID: 8ff2a812e1b667a48196900c3391da0324311151d1a06554277cb012b9a5722b
+        with:
+          coverageCommand: make test-coverage
+          debug: true
