--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 # Name of workflow
-name: my-check
+name: Node CI
 
 # Trigger the workflow on push or pull request
 on:
@@ -11,6 +11,7 @@ env:
 
 jobs:
   build:
+
     # The type of machine to run the job on
     runs-on: ubuntu-latest
 
@@ -20,8 +21,8 @@ jobs:
         node-version: [18.x]
 
     steps:
-      # Check-out repository under GitHub workspace
-      # https://github.com/actions/checkout
+        # Check-out repository under GitHub workspace
+        # https://github.com/actions/checkout
       - uses: actions/checkout@v3
         # Step's name
       - name: Use Node.js ${{ matrix.node-version }}
@@ -34,14 +35,10 @@ jobs:
           cache: 'npm'
       - run: make install
       - run: make lint
-      - run: make test
       - name: Test & publish code coverage
-        # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
-        uses: paambaati/codeclimate-action@v3.0.0
-        # Add Code Climate secret key
+        uses: paambaati/codeclimate-action@v3.2.0
         env:
-          CC_TEST_REPORTER_ID: 8ff2a812e1b667a48196900c3391da0324311151d1a06554277cb012b9a5722b
+           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}} 
         with:
           coverageCommand: make test-coverage
           debug: true
